add controls to videos

--- a/choreography/index.pug
+++ b/choreography/index.pug
@@ -53,7 +53,7 @@ block content
             <i>Vertical Words</i> is an attempt to prove that the perception of meaning is 
             inevitable, regardless of whether or not the artist intended any meaning. The 
             choreographic process was inspired by the "word sculptures" of minimalist sculptor, Carl Andre.
-        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/xsECKU9nBCY?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .choreo-box
         .copy
           h4 Not Empty 
@@ -74,7 +74,7 @@ block content
             audiences through romanticism, narrative, or encoded meanings. They often referred 
             to their work as "meaningless" or "purposeless." But this attempt to signify nothing 
             signifies something. The attempt to remove purpose is a purpose itself.
-        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/L8l2vXdaTiY?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .choreo-box
         .copy
           h4 Insatiable 
@@ -91,7 +91,7 @@ block content
             as well as other performances at USF. This successful partnership between these two 
             choreogrpahers has led to further collaboration. Right now, the two are in the process 
             of creating an e-book which cohesively incorporates dance and poetry (with poetry by Patrick McCarty).
-        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        iframe.visual(width="480" height="277" src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .choreo-box
         .copy
           h4 Scream 
