--- a/video/index.pug
+++ b/video/index.pug
@@ -17,11 +17,11 @@ block content
         .card
           iframe(src="https://player.vimeo.com/video/151188661?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
         .card
-          iframe(src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+          iframe(src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&ampshowinfo=0" frameborder="0" allowfullscreen)
         .card
-          iframe(src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+          iframe(src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
         .card
-          iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+          iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .caption
 block scripts
   script(src="../assets/js/jquery.js")
