make secondary set of Emilyy changes

--- a/statement/index.pug
+++ b/statement/index.pug
@@ -18,7 +18,7 @@ block content
         I have never done before and things that no one has ever done before. 
         I admire people who can change my mind and I enjoy having my mind changed 
         because it indicates that I have learned something. I admire art that dissatisfies 
-        or irritates its audiences because great art has the capacity to <i>do</i> more than simply please all people.
+        or irritates its audiences because great art has the capacity to do more than simply please all people.
       p.
         I am interested in witnessing – and participating in – sincerity and honesty onstage. I admire dancers 
         who can simply <i>be</i> and <i>do</i> during performance rather than those who simulate or put on anything 
@@ -31,11 +31,11 @@ block content
         distinctive voices and I respect my dancers as individuals with their own wealth of experiences. 
         Accordingly, I value unison of intent among a group of performers more than I value perfect physical unison.
       p.
-        I create work in order to share my ideas with other people. I <i>do</i> not aim to please or to displease 
-        my audiences; I want merely to expose them to my ideas and <i>be</i> a witness to their reactions. 
+        I create work in order to share my ideas with other people. I do not aim to please or to displease 
+        my audiences; I want merely to expose them to my ideas and be a witness to their reactions. 
         I strive to interact with audiences through my work. However, I often find it difficult to 
         communicate ideas about my choreography via spoken or written language. Dance is capable of 
-        expressing different things than words can, and I <i>do</i> not attempt to impose the confines of 
+        expressing different things than words can, and I do not attempt to impose the confines of 
         language upon dance. Thus, I usually let my work speak for itself.
     include ../pug/_footer.pug
 block scripts
