--- a/sass/index.sass
+++ b/sass/index.sass
@@ -199,6 +199,7 @@
   left: -170px
   &.fadeInLate
     opacity: 0
+    -webkit-animation: fadeIn 500ms forwards 3s
     animation: fadeIn 500ms forwards 3s
 
 
