Update videos to new links

--- a/video/index.pug
+++ b/video/index.pug
@@ -14,14 +14,18 @@ block content
       .prev &lt;
       .next &gt;
       .carousel
-        .card
-          iframe(src="https://player.vimeo.com/video/151188661?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
-        .card
-          iframe(src="https://www.youtube.com/embed/KgTw8PLSSlw?rel=0&ampshowinfo=0" frameborder="0" allowfullscreen)
-        .card
-          iframe(src="https://www.youtube.com/embed/GR-ItOkoQ6w?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
-        .card
-          iframe(src="https://www.youtube.com/embed/m0vI2u5sM1I?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        //- .card
+        //-   iframe(src="https://player.vimeo.com/video/151188661?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
+        .card(data-caption="untitled_37.txt")
+          iframe(src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        .card(data-caption="Cause Redux")
+          iframe(src="https://www.youtube.com/embed/e1rxVNvJTJQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        .card(data-caption="Unkindness of Ravens")
+          iframe(src="https://www.youtube.com/embed/sANlYpQEVgo?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        .card(data-caption="Modern/Contemporary Excerpts")
+          iframe(src="https://www.youtube.com/embed/pP-pS1zqhm4?rel=0&amp;showinfo=0"  frameborder="0" allowfullscreen)
+        .card(data-caption="Ballet Excerpts")
+          iframe(src="https://www.youtube.com/embed/zqiOqTy0BWk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
       .caption
 block scripts
   script(src="../assets/js/jquery.js")
