--- a/sass/index.sass
+++ b/sass/index.sass
@@ -200,6 +200,7 @@
   &.fadeInLate
     opacity: 0
     -webkit-animation: fadeIn 500ms forwards 3s
+    -moz-animation: fadeIn 500ms forwards 3s
     animation: fadeIn 500ms forwards 3s
 
 
