--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -351,9 +351,6 @@ h4 {
     height: 200px;
     -webkit-transition: height 300ms ease-in-out;
     transition: height 300ms ease-in-out; }
-    .media .carousel img.jumbo {
-      height: 350px;
-      transform: scale(1); }
   .media .carousel img, .media .carousel .card {
     border: 4px solid white;
     position: absolute;
@@ -365,6 +362,9 @@ h4 {
     .media .carousel img.active, .media .carousel .card.active {
       cursor: -webkit-zoom-in;
       cursor: zoom-in; }
+      .media .carousel img.active.jumbo, .media .carousel .card.active.jumbo {
+        height: 350px;
+        cursor: zoom-out; }
 .media .caption {
   text-align: center;
   display: inline-block;
