--- a/photo/index.pug
+++ b/photo/index.pug
@@ -8,19 +8,19 @@ block content
       a(href="/" alt="Emily") E
         img(src="../assets/img/dancing/crop/4.png")
     h1#photo Photo
-    .media-container.photo-container        
+    .media-container.photo-container
       .prev &lt;
       .next &gt;
       .carousel
-        img(src="../assets/img/dancing/carousel/1.jpg"  data-caption="2016<br>Photograph by Jason Lam" )
-        img(src="../assets/img/dancing/carousel/2.jpg"  data-caption="<i>Threshold</i><br>2015<br>Choreography by Andrew Carroll<br>Photogrpah by Kyle Scharf" )
-        img(src="../assets/img/dancing/carousel/3.jpg"  data-caption="<i>Unkindness of Ravens</i><br>2014<br>Choreography by Carl Flink<br>Photograph by Tiffany Schrepferman" )
-        img(src="../assets/img/dancing/carousel/4.jpg"  data-caption="<i>Cause</i><br>2016<br>Choreography by Robert Moses<br>Photograph by Kyle Scharf" )
-        img(src="../assets/img/dancing/carousel/5.jpg"  data-caption="<i>Fingerprints</i><br>2016<br>Choreography by Paula Nunez<br>Photograph by Kyle Scharf" )
-        img(src="../assets/img/dancing/carousel/6.jpg"  data-caption="<i>If this continues…</i><br>2015<br>Choreography by Alyssa Marchand<br>Photograph by Candace Kaw" )
-        img(src="../assets/img/dancing/carousel/7.jpg"  data-caption="<i>KOTO</i><br>2015<br>Choreography by Alonzo King<br>Photrograph by Kyle Scharf" )
-        img(src="../assets/img/dancing/carousel/8.jpg"  data-caption="<i>Picture in a Frame</i><br>2013<br>Choreography by Bliss Kohlmyer<br>Photograph by Candace Kaw" )
-        img(src="../assets/img/dancing/carousel/9.jpg"  data-caption="<i>3:00am</i><br>2014/2016<br>Choreography by Andrew Carroll<br>Photograph by Candace Kaw/Soho Images" )
+        img(src="../assets/img/dancing/carousel/1.jpg"  height="200px" data-caption="2016<br>Photograph by Jason Lam" )
+        img(src="../assets/img/dancing/carousel/2.jpg"  height="200px" data-caption="<i>Threshold</i><br>2015<br>Choreography by Andrew Carroll<br>Photograph by Kyle Scharf" )
+        img(src="../assets/img/dancing/carousel/3.jpg"  height="200px" data-caption="<i>Unkindness of Ravens</i><br>2014<br>Choreography by Carl Flink<br>Photograph by Tiffany Schrepferman" )
+        img(src="../assets/img/dancing/carousel/4.jpg"  height="200px" data-caption="<i>Cause</i><br>2016<br>Choreography by Robert Moses<br>Photograph by Kyle Scharf" )
+        img(src="../assets/img/dancing/carousel/5.jpg"  height="200px" data-caption="<i>Fingerprints</i><br>2016<br>Choreography by Paula Nunez<br>Photograph by Kyle Scharf" )
+        img(src="../assets/img/dancing/carousel/6.jpg"  height="200px" data-caption="<i>If this continues…</i><br>2015<br>Choreography by Alyssa Marchand<br>Photograph by Candace Kaw" )
+        img(src="../assets/img/dancing/carousel/7.jpg"  height="200px" data-caption="<i>KOTO</i><br>2015<br>Choreography by Alonzo King<br>Photrograph by Kyle Scharf" )
+        img(src="../assets/img/dancing/carousel/8.jpg"  height="200px" data-caption="<i>Picture in a Frame</i><br>2013<br>Choreography by Bliss Kohlmyer<br>Photograph by Candace Kaw" )
+        img(src="../assets/img/dancing/carousel/9.jpg"  height="200px" data-caption="<i>3:00am</i><br>2014/2016<br>Choreography by Andrew Carroll<br>Photograph by Candace Kaw/Soho Images" )
       .caption
 block scripts
   script(src="../assets/js/jquery.js")
