--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -58,9 +58,6 @@
       height: 200px
       -webkit-transition: height 300ms ease-in-out
       transition: height 300ms ease-in-out
-      &.jumbo
-        height: 350px
-        transform: scale(1)
 
     img, .card
       border: 4px solid white
@@ -74,6 +71,10 @@
       &.active
         cursor: -webkit-zoom-in
         cursor: zoom-in
+        &.jumbo
+          height: 350px
+          cursor: zoom-out
+          
   .caption
     text-align: center
     display: inline-block
@@ -82,6 +83,6 @@
     font-family: $font-lato
     font-weight: 100
     margin-top: 100px
-    
+
 .video-container .caption
   margin-top: -50px
