--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -74,7 +74,7 @@
         &.jumbo
           height: 350px
           cursor: zoom-out
-          
+
   .caption
     text-align: center
     display: inline-block
@@ -84,5 +84,9 @@
     font-weight: 100
     margin-top: 100px
 
+    small
+      font-size: medium
+
+
 .video-container .caption
-  margin-top: -50px
+  margin-top: -120px
