update video captions and caption sizes

--- a/video/index.pug
+++ b/video/index.pug
@@ -14,18 +14,16 @@ block content
       .prev &lt;
       .next &gt;
       .carousel
-        //- .card
-        //-   iframe(src="https://player.vimeo.com/video/151188661?title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
-        .card(data-caption="untitled_37.txt")
-          iframe(src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
-        .card(data-caption="Cause Redux")
+        .card(data-caption="<i>Cause</i><small><br>2016<br>Choreographed by Robert Moses<br>Restaged by Bliss Kohlmyer</small")
           iframe(src="https://www.youtube.com/embed/e1rxVNvJTJQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
-        .card(data-caption="Unkindness of Ravens")
+        .card(data-caption="<i>Unkindness of Ravens</i><small><br>2014<br>Choreographed by Carl Flink</small>")
           iframe(src="https://www.youtube.com/embed/sANlYpQEVgo?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
-        .card(data-caption="Modern/Contemporary Excerpts")
-          iframe(src="https://www.youtube.com/embed/pP-pS1zqhm4?rel=0&amp;showinfo=0"  frameborder="0" allowfullscreen)
-        .card(data-caption="Ballet Excerpts")
+        .card(data-caption="<i>untitled_37.txt</i><small><br>2016<br>Choreographed and performed by Emily Hansel</small>")
+          iframe(src="https://www.youtube.com/embed/S6XhwIM7ZdA?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        .card(data-caption="Ballet Performance Samples<small><br>2014-2016</small>")
           iframe(src="https://www.youtube.com/embed/zqiOqTy0BWk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen)
+        .card(data-caption="Additional Modern/Contemporary Performance Samples<small><br>2013-2015</small>")
+          iframe(src="https://www.youtube.com/embed/pP-pS1zqhm4?rel=0&amp;showinfo=0"  frameborder="0" allowfullscreen)
       .caption
 block scripts
   script(src="../assets/js/jquery.js")
