Update bio and statement to use markdown

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -6,8 +6,8 @@
 @import animations
 @import fonts
 @import palette
-
-@import reset, media, bio, choreography
+@import reset
+@import media, bio, choreography
 .load-images
   visibility: hidden
   height: 0
