--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -699,7 +699,14 @@ h4 {
         -webkit-animation-delay: 900ms;
         -moz-animation-delay: 900ms;
         animation-delay: 900ms; }
-    .body-container.bio .bio-container .bio-highlight {
+      .body-container.bio .bio-container p:nth-child(7) {
+        -webkit-animation: fadeIn 300ms linear forwards;
+        -moz-animation: fadeIn 300ms linear forwards;
+        animation: fadeIn 300ms linear forwards;
+        -webkit-animation-delay: 1050ms;
+        -moz-animation-delay: 1050ms;
+        animation-delay: 1050ms; }
+    .body-container.bio .bio-container a {
       color: #4d6bd9;
       font-weight: 700; }
 
