--- a/statement/index.pug
+++ b/statement/index.pug
@@ -9,7 +9,7 @@ block content
   .rightImage
     img(src="../assets/img/insatiable.png")
   .body-container.bio
-    .bio-container
+    .bio-container.statement-container
       h1 Artist Statement
       include:markdown-it ./statement.md
     include ../pug/_footer.pug
