--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -656,7 +656,8 @@ h4 {
       word-wrap: break-word;
       color: white;
       text-align: justify;
-      opacity: 0; }
+      opacity: 0;
+      margin: 0 0 10px; }
       .body-container.bio .bio-container p:nth-child(1) {
         -webkit-animation: fadeIn 300ms linear forwards;
         -moz-animation: fadeIn 300ms linear forwards;
@@ -709,6 +710,9 @@ h4 {
     .body-container.bio .bio-container a {
       color: #4d6bd9;
       font-weight: 700; }
+
+.statement-container p:last-of-type {
+  text-align: center; }
 
 @media screen and (max-width: 500px) {
   .body-container.bio {
