--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -7,6 +7,10 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel="shortcut icon", href="/assets/img/favicon2.ico")
     link(rel="icon", href="/assets/img/favicon2.ico", type="image/x-icon")
+    meta(property="og:title" content="Emily Hansel")
+    meta(property="og:type" content="website")
+    meta(property="og:url" content="http://emilyhansel.me")
+    meta(property="og:image" content="/assets/img/facebook.png")
     block title
   body
     .nav-opener
