--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -10,7 +10,7 @@ html
     meta(property="og:title" content="Emily Hansel")
     meta(property="og:type" content="website")
     meta(property="og:url" content="http://emilyhansel.me")
-    meta(property="og:image" content="/assets/img/facebook.png")
+    meta(property="og:image" content="/assets/img/facebook.PNG")
     block title
   body
     .nav-opener
