Open GL finally

--- a/pug/_main_template.pug
+++ b/pug/_main_template.pug
@@ -8,6 +8,7 @@ html
     link(rel="shortcut icon", href="/assets/img/favicon2.ico")
     link(rel="icon", href="/assets/img/favicon2.ico", type="image/x-icon")
     meta(property="og:title" content="Emily Hansel")
+    meta(property="og:description" content="dancer | choreography")  
     meta(property="og:type" content="website")
     meta(property="og:url" content="http://emilyhansel.me")
     meta(property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG")
