--- a/statement/index.pug
+++ b/statement/index.pug
@@ -11,7 +11,7 @@ block content
   .body-container.bio
     .bio-container.statement-container
       h1 Artist Statement
-      include:markdown-it ./statement.md
+      include:marked ./statement.md
     include ../pug/_footer.pug
 block scripts
   script sessionStorage.seen = true;
